[package]
name = "libomni"
description = "A utility library for Omni-forge and related programs"
authors = ["OmniCloud <https://github.com/OmniCloudOrg>","Caznix <https://github.com/Caznix>"]
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
uuid = { version = "1.2", features = ["v4"] }
chrono = { version = "0.4" }