[package]
name = "libomni"
description = "A utility library for Omni-forge and related programs"
authors = ["OmniCloud <https://github.com/OmniCloudOrg>","Caznix <https://github.com/Caznix>"]
version = "0.2.2"
edition = "2021"
license = "GPL-3.0"

[dependencies]
uuid = { version = "1.2", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlx = { version = "0.8.3", features = ["runtime-async-std", "sqlite", "chrono", "uuid"] }
chrysalis_rs = "0.1.0"