[package]
name = "libomni"
description = "A utility library for Omni-forge and related programs"
authors = ["OmniCloud <https://github.com/OmniCloudOrg>","Caznix <https://github.com/Caznix>"]
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
chrysalis_rs = "0.1.0"
log = "0.4.27"
jsonwebtoken = "9.3.1"